--- a/frontend/src/features/comments/CommentMoreAction.module.css
+++ b/frontend/src/features/comments/CommentMoreAction.module.css
@@ -113,7 +113,7 @@
 
   .dropdown {
     position: absolute;
-    top: calc(100% + 8px);
+    top: calc(90%);
     right: 0;
     left: auto;
     bottom: auto;
